--- a/index.html
+++ b/index.html
@@ -60,14 +60,15 @@
             </div>
         </div>
         
-        <section class="quick-actions">
+  <section class="quick-actions">
             <h2>Quick Actions</h2>
             <div class="actions-grid">
-                <a href="#" class="action-item red-bg">
+                <a href="https://cybercrime.gov.in/Webform/Crime_AuthoLogin.aspx" class="action-item red-bg" target="_blank">
                     <i class="fas fa-file-alt"></i>
                     <span>Report</span>
                     <small>Scam</small>
                 </a>
+
                 <a href="learning.html" class="action-item green-bg">
                     <i class="fas fa-book-open"></i>
                     <span>Learn</span>
@@ -78,14 +79,15 @@
                     <span>Alerts</span>
                     <small>Check</small>
                 </a>
-                <a href="#" class="action-item purple-bg">
-                    <i class="fas fa-question-circle"></i>
-                    <span>Quiz</span>
-                    <small>Test</small>
-                </a>
+                <a href="#quiz-container" id="start-quiz-btn" class="action-item purple-bg">
+    <i class="fas fa-question-circle"></i>
+    <span>Quiz</span>
+    <small>Test</small>
+</a>
             </div>
         </section>
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
