--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                     <span>Alerts</span>
                     <small>Check</small>
                 </a>
+                  <a href="https://docs.google.com/forms/d/1oX03THxKUL4lLHNr4jYEzLLl_JhHExKb9Pa3fCesIcc/edit" class="action-item" style="background-color:#34495e; color:white;" target="_blank">
+                    <i class="fas fa-share-alt"></i> 
+                    <span>Share</span>
+                    <small>with Us</small>
+                </a>
+
                 <a href="#quiz-container" id="start-quiz-btn" class="action-item purple-bg">
     <i class="fas fa-question-circle"></i>
     <span>Quiz</span>
@@ -91,3 +97,4 @@
 </body>
 
 </html>
+
