--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <small>with Us</small>
                 </a>
 
-                <a href="#quiz-container" id="start-quiz-btn" class="action-item purple-bg">
+                  <a href="https://form.jotform.com/252956155106458" class="action-item" style="background-color:#34495e;" target="_blank">
     <i class="fas fa-question-circle"></i>
     <span>Quiz</span>
     <small>Test</small>
@@ -97,4 +97,5 @@
 </body>
 
 </html>
+
 
