--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                     <span>Learn</span>
                     <small>Safety</small>
                 </a>
-                <a href="#" class="action-item yellow-bg">
-                    <i class="fas fa-exclamation-circle"></i>
-                    <span>Alerts</span>
-                    <small>Check</small>
-                </a>
+               <a href="check_alert.html" class="action-item yellow-bg">
+              <i class="fas fa-exclamation-circle"></i>
+              <span>Alerts</span>
+              <small>Check</small>
+          </a>
                   <a href="https://docs.google.com/forms/d/1oX03THxKUL4lLHNr4jYEzLLl_JhHExKb9Pa3fCesIcc/edit" class="action-item" style="background-color:#34495e; color:white;" target="_blank">
                     <i class="fas fa-share-alt"></i> 
                     <span>Share</span>
@@ -97,5 +97,6 @@
 </body>
 
 </html>
+
 
 
