--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
 
                 <div class="card community-impact">
                     <h2 class="card-title"><i class="fas fa-users"></i> Community Impact</h2>
-                    <div class="impact-stats">
-                        <div class="stat-item">
-                            <span class="stat-number green-text">2,543</span>
-                            <span class="stat-label">Users Protected</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-number">187</span>
-                            <span class="stat-label">Scams Reported</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-number green-text">88%</span>
-                            <span class="stat-label">Safety Score</span>
-                        </div>
-                    </div>
+                   <div class="impact-stats">
+    <div class="stat-item">
+        <span class="stat-number green-text" id="users-protected-stat">...</span>
+        <span class="stat-label">Incidents Analyzed</span>
+    </div>
+    <div class="stat-item">
+        <span class="stat-number" id="scams-reported-stat">...</span>
+        <span class="stat-label">Fraud Identified</span>
+    </div>
+    <div class="stat-item">
+        <span class="stat-number green-text" id="safety-score-stat">...</span>
+        <span class="stat-label">Detection Rate</span>
+    </div>
+</div>
                 </div>
             </div>
         </div>
@@ -97,6 +97,7 @@
 </body>
 
 </html>
+
 
 
 
